--- a/SobaFw.Client/SobaFw.Client.csproj
+++ b/SobaFw.Client/SobaFw.Client.csproj
@@ -4,6 +4,11 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<PackageId>$(AssemblyName)</PackageId>
+		<Authors>Soba Team</Authors>
+		<Company>SOBA</Company>
+		<Version>1.0.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
