--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,9 +27,21 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Publish NuGet
-  # You may pin to the exact commit or the version.
-  # uses: brandedoutcast/publish-nuget@c12b8546b67672ee38ac87bea491ac94a587f7cc
+        # You may pin to the exact commit or the version.
+        #uses: brandedoutcast/publish-nuget@c12b8546b67672ee38ac87bea491ac94a587f7cc
       uses: brandedoutcast/publish-nuget@v2.5.5
       with:
-        api-key: ${{secrets.NUGET_API_KEY}}
-          
+        # Filepath of the project to be packaged, relative to root of repository
+        PROJECT_FILE_PATH: SOBA-FW/SOBA-FW/SobaFw.Client/SobaFw.Client.csproj, SOBA-FW/SOBA-FW/SobaFw.Server/SobaFw.Server.csproj, SOBA-FW/SOBA-FW/SobaFw.Shared/SobaFw.Shared.csproj
+        NUGET_KEY: ${{secrets.NUGET_API_KEY}}
+       # NuGet package id, used for version detection & defaults to project name
+        #PACKAGE_NAME: # optional
+        # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
+        #VERSION_FILE_PATH: # optional
+        # Regex pattern to extract version info in a capturing group
+        #VERSION_REGEX: # optional, default is ^\s*<Version>(.*)<\/Version>\s*$
+        # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
+        #VERSION_STATIC: # optional
+        # Flag to toggle git tagging, enabled by default
+      
+ 
