--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,7 +32,7 @@ jobs:
       uses: brandedoutcast/publish-nuget@v2.5.5
       with:
         # Filepath of the project to be packaged, relative to root of repository
-        PROJECT_FILE_PATH: SOBA-FW/SOBA-FW/SobaFw.Client/SobaFw.Client.csproj
+        PROJECT_FILE_PATH: SOBA-FW/SobaFw.Client/SobaFw.Client.csproj
         NUGET_KEY: ${{secrets.NUGET_API_KEY}}
        # NuGet package id, used for version detection & defaults to project name
         #PACKAGE_NAME: # optional
