--- a/SobaFw.Client/SobaFw.Client.csproj
+++ b/SobaFw.Client/SobaFw.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
@@ -8,7 +8,7 @@
 		<PackageId>$(AssemblyName)</PackageId>
 		<Authors>Soba Team</Authors>
 		<Company>SOBA</Company>
-		<Version>1.0.2</Version>
+		<Version>1.0.3</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
