--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,3 +32,5 @@ jobs:
      # run: dotnet nuget push "*.nupkg" --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
     - name: Push to GitHub
       run: dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/mhasabalah/index.json"
+    - name: Push Nuget 
+      run: dotnet nuget push "*.nupkg"  --api-key ${{secrets.GIT_API_KEY}} --source "github"
