--- a/SobaFw.Client/SobaFw.Client.csproj
+++ b/SobaFw.Client/SobaFw.Client.csproj
@@ -9,6 +9,7 @@
 		<Authors>Soba Team</Authors>
 		<Company>SOBA</Company>
 		<Version>1.0.3</Version>
+		<RepositoryUrl>https://github.com/mhasabalah/SOBA-FW</RepositoryUrl>
 	</PropertyGroup>
 
 	<ItemGroup>
