--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,9 +28,9 @@ jobs:
       run: dotnet test -c Release --no-build --verbosity normal
     - name: Pack nugets
       run: dotnet pack -c Release --no-build --output .
-    #- name: Push to NuGet
-     # run: dotnet nuget push "*.nupkg" --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
-    - name: Push to GitHub
+    - name: Push to NuGet
+      run: dotnet nuget push "*.nupkg" --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
+    - name: Genrate source
       run: dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/mhasabalah/index.json"
-    - name: Push Nuget 
+    - name: Push Nuget to github 
       run: dotnet nuget push "*.nupkg"  --api-key ${{secrets.GIT_API_KEY}} --source "github"
